##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-12-05	tboggs <tboggs@users.sourceforge.net>

    Fixed error when bands not specified in `imshow` and incorrect handling of
    `stretch_all` keyword to get_rgb).

    * graphics/__init__.py: Import ImageView from spypylab
    * graphics/graphics.py(get_rgb): Corrected handling of `stretch_all`
      kwarg (was stretching when strech_all was provided but False (or 0)).
    * graphics/spypylab:
      (ImageView.set_data):
      - Separate get_rgb and mpl.imshow keywords.
      - Avoid exception when bands not specified.
      (ImageView.set_classes): Filter get_rgb keywords.
      (imshow):
      - Make `colors` a positional argument.
      - Simplified setup of ImageView object.

2013-12-05	tboggs <tboggs@users.sourceforge.net>

    Provide settings for spectral.imshow windows.

    * spectral.py (SpySettings):
      - Converted attributes to class attributes
      - Added imshow settings

    Disable matplotlib key event handlers that conflict with SPy handlers.
    Use common interpolation for data and class layers.

    * graphics/spypylab.py:
      (check_disable_mpl_callbacks): New function.
      (ImageViewKeyboardHandler.handle_event): "i" toggles pixel interpolation.
      (ImageView.interpolation): New property method.
      (ImageView.__init__): disable mpl callbacks. Use common interpolation.
      (ImageView.set_data): Use common interpolation
      (ImageView.set_classes): ditto
      (ImageView.refresh): ditto
      (ImageView.open_zoom): ditto

2013-12-03	tboggs <tboggs@users.sourceforge.net>

    Simplified unit test interface.

    * tests/spytest.py:
      (SpyTest.run): New method that elimiates need for `run` method or
      `test_method` decorators in subclasses.
    * tests/detectors.py: Remove `test_method` decorators and `run` methods.